@@ -10,64 +10,50 @@
 
     <name>Serenity project with JUnit and WebDriver</name>
 
-   <properties>
-        <serenity.version>1.1.36</serenity.version>
-        <webdriver.driver>firefox</webdriver.driver>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <serenity.version>1.1.42</serenity.version>
-        <serenity.jira.version>1.1.1</serenity.jira.version>
-        <chromeDrivers.directory>${project.projectDirectory}/chrome-drivers</chromeDrivers.directory>
-        <serenity.use.unique.browser>true</serenity.use.unique.browser>
+        <serenity.version>1.5.10</serenity.version> <!-- https://bintray.com/serenity/maven/serenity-core/ -->
+        <serenity.maven.version>1.5.10</serenity.maven.version>
+        <tags></tags>
+        <webdriver.driver>chrome</webdriver.driver>
+        <webdriver.chrome.driver.path>chromedriver.exe</webdriver.chrome.driver.path>
+        <!--<dependency.locations.enabled>false</dependency.locations.enabled>-->
     </properties>
-
+    <!-- Define the Bintray repos for convenience -->
     <repositories>
-      <repository>
-        <snapshots>
-        <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray</name>
-        <url>http://jcenter.bintray.com</url>
-      </repository>
+        <repository>
+            <id>serenity</id>
+            <name>bintray</name>
+            <url>http://dl.bintray.com/serenity/maven</url>
+        </repository>
     </repositories>
     <pluginRepositories>
-      <pluginRepository>
-        <snapshots>
-        <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray-plugins</name>
-        <url>http://jcenter.bintray.com</url>
-      </pluginRepository>
+        <pluginRepository>
+            <id>serenity</id>
+            <name>bintray-plugins</name>
+            <url>http://dl.bintray.com/serenity/maven</url>
+        </pluginRepository>
     </pluginRepositories>
-
     <dependencies>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-core</artifactId>
-            <version>${serenity.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-screenplay</artifactId>
-            <version>${serenity.version}</version>
+            <version>1.5.10</version>
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-screenplay-webdriver</artifactId>
-            <version>${serenity.version}</version>
+            <version>1.5.10</version>
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-junit</artifactId>
             <version>${serenity.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.7</version>
+            <version>1.7.12</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -76,9 +62,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.lambdaj</groupId>
+            <artifactId>lambdaj</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>1.7.0</version>
+            <version>3.1.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -87,9 +84,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
@@ -97,13 +91,17 @@
                 <configuration>
                     <includes>
                         <include>**/*Test.java</include>
-                        <include>**/Test*.java</include>
-                        <include>**/When*.java</include>
-                        <include>**/*Story.java</include>
                     </includes>
-                    <argLine>-Xmx512m</argLine>
-                    <systemPropertyVariables>
+                    <systemProperties>
                         <webdriver.driver>${webdriver.driver}</webdriver.driver>
+                        <webdriver.chrome.driver>${webdriver.chrome.driver.path}</webdriver.chrome.driver>
+                    </systemProperties>
+                    <parallel>methods</parallel>
+                    <threadCount>1</threadCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <systemPropertyVariables>
+                        <tags>${tags}</tags>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
@@ -120,14 +118,21 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.version}</version>
+                <version>${serenity.maven.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.serenity-bdd</groupId>
+                        <artifactId>serenity-core</artifactId>
+                        <version>1.5.3</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>serenity-reports</id>
